# testsight

./: .gitignore  README.en.md  README.md  pyproject.toml  run_impacted_tests.py
src/testsight/: __init__.py  cli.py  config.py  indexer.py  resolver.py  runner.py
tests/: conftest.py  test_indexer.py  test_resolver.py  test_runner_integration.py  test_tokenizer.py
