[tool.poetry]
name = "testsight"
version = "0.1.0"
description = "Targeted pytest runner that understands your Git diff."
authors = ["Danil"]
license = "MIT"
readme = "README.md"
packages = [{ include = "testsight", from = "src" }]
keywords = ["pytest", "impacted tests", "ci", "git", "productivity"]
homepage = "https://github.com/danil/testsight"
repository = "https://github.com/danil/testsight"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
tomli = { version = "^2.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
testsight = "testsight.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
